// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders the UI snapshot correctly 1`] = `
<aside
  className="css-1xdhyk6"
  data-type="informative"
  id="ds-banner"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="ds-banner-icon"
    focusable={false}
    role="img"
    title="Banner informative icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 2`] = `
<aside
  className="css-1xdhyk6"
  data-type="negative"
  id="ds-banner-bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="ds-banner-bannerID3-icon"
    focusable={false}
    role="img"
    title="Banner negative icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-15kduf4"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 3`] = `
<aside
  className="css-1xdhyk6"
  data-type="neutral"
  id="ds-banner-bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="ds-banner-bannerID3-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 4`] = `
<aside
  className="css-1xdhyk6"
  data-type="positive"
  id="ds-banner-bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1976tye"
    data-file-name="SvgActionCheckCircle"
    data-testid="ds-banner-bannerID3-icon"
    focusable={false}
    role="img"
    title="Banner positive icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 5`] = `
<aside
  className="css-1xdhyk6"
  data-type="recommendation"
  id="ds-banner-bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1976tye"
    data-file-name="SvgActionLightbulb"
    data-testid="ds-banner-bannerID3-icon"
    focusable={false}
    role="img"
    title="Banner recommendation icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 6`] = `
<aside
  className="css-1xdhyk6"
  data-type="warning"
  id="ds-banner-bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1976tye"
    data-file-name="SvgAlertNotificationImportant"
    data-testid="ds-banner-bannerID3-icon"
    focusable={false}
    role="img"
    title="Banner warning icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 7`] = `
<aside
  className="css-1xdhyk6"
  data-type="neutral"
  id="ds-banner-bannerID4"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1vgifmd"
    data-file-name="SvgErrorOutline"
    data-testid="ds-banner-bannerID4-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 8`] = `
<aside
  className="css-1xdhyk6"
  data-type="neutral"
  id="ds-banner-bannerID7"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1vgifmd"
    data-file-name="SvgErrorOutline"
    data-testid="ds-banner-bannerID7-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    Banner content.
  </div>
  <button
    aria-label="Close the banner"
    className="chakra-button css-8bx9xp"
    id="ds-banner-bannerID7-dismissible-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="chakra-icon css-1vgifmd"
      data-file-name="SvgClose"
      data-testid="ds-banner-bannerID7-dismissible-icon"
      focusable={false}
      role="img"
      title="Banner close icon"
    />
  </button>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 9`] = `
<aside
  className="css-16h1ce8"
  data-type="neutral"
  id="ds-banner-chakra"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="ds-banner-chakra-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 10`] = `
<aside
  className="css-1xdhyk6"
  data-testid="props"
  data-type="neutral"
  id="ds-banner-props"
>
  <svg
    aria-hidden={true}
    className="chakra-icon banner-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="ds-banner-props-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;
